trunk/Archive2/e2/3a9ca49b7cf45d/output
main.cpp:5:9: error: expected '(' after 'for'
     for... ( decltype(auto) arg : args ) {
        ^
1 error generated.
